--- a/class6/class6HTML与JavaScript.html
+++ b/class6/class6HTML与JavaScript.html
@@ -109,8 +109,14 @@ document.getElementById("demotext").style.textAlign = "center";
 		<p id="demotext">有节操！有节操！有节操，噢噢噢噢~~~</p>
 		<button type="button" onclick="document.getElementById('demotext').style.fontSize = '25px';
 		document.getElementById('demotext').style.color = 'black';
-		document.getElementById('demotext').style.backgroundColor = 'grey';
-		document.getElementById('demotext').style.textAlign = 'center';">点击我改变样式！</button>
+		document.getElementById('demotext').style.backgroundColor = 'white';
+		document.getElementById('demotext').style.textAlign = 'center';
+		document.getElementById('demotext').style.textShadow = '0px 0px 0px white';">点击我改变样式！</button>
+		<br />
+		<p>可以看到想要改变样式的话，我们只需要在“('id名')”后面更改成相应的属性</p>
+		<p>写法通常是： .[属性] </p>
+		<p>css的style属性写法是： .style.[属性]</p>
+		<p>“=”的后面是写属性值<span style="color: red;">(记得引号！！！)</span></p>
 		<hr />
 		<h3>&lt;noscript&gt; 标签</h3>
 		<p>HTML &lt;noscript&gt; 标签定义了替代内容，这些内容将显示给在浏览器中禁用了脚本或浏览器不支持脚本的用户：</p>
