--- a/class6/class6HTML与JavaScript.html
+++ b/class6/class6HTML与JavaScript.html
@@ -52,7 +52,7 @@ onclick="document.getElementById('demo').innerHTML = Date()"&gt;
 		<hr />
 		<p>说明：</p>
 		<p>这里引入一个 &lt;button&gt; 标签，这个是用来定义一个可点击的按钮。</p>
-		<p>&lt;button&gt; 中的"onclick"属性，是指点击后的事件(俗称点击后会干说什么)</p>
+		<p>&lt;button&gt; 中的"onclick"属性，是指点击后的事件(俗称点击后会干什么)</p>
 		<p>这里 onclick 属性里的属性值，就是一段JavaScript代码</p>
 		<hr />
 		<p>我们分开来看：</p>
@@ -101,7 +101,7 @@ onclick="document.getElementById('demo').innerHTML = Date()"&gt;
 			<code>
 document.getElementById("demotext").style.fontSize = "25px";
 document.getElementById("demotext").style.color = "black";
-document.getElementById("demotext").style.backgroundColor = "grey";
+document.getElementById("demotext").style.backgroundColor = "white";
 document.getElementById("demotext").style.textAlign = "center";
 			</code>
 		</pre>
