--- a/class6/class6HTML与JavaScript.html
+++ b/class6/class6HTML与JavaScript.html
@@ -237,8 +237,11 @@ document.getElementById("demo").innerHTML = "Hello JavaScript!";
 				<p>其中导航链接的超链接需要使用target属性指向到showframe这个name(name的属性值)</p>
 				<p>点击<a target="_blank" href="example2.html">此处</a>查看！</p>
 				<hr />
+				<button type="button" onclick="alert('你就是个寄吧！')">你敢点我试试！</button>
 				<p>相信各位都挺难受的，这节没有图片。 <br />
 					所以在<a target="_blank" href="../img/class6/picture.jpg">这里</a>留张图吧(卧槽我什么德行)</p>
+				<p>休闲小游戏:</p>
+			<iframe src="https://www.crazygames.com/embed/ovo-online" style="width: 100%; height: 600px;" frameborder="0"></iframe>
 
 		</div>
 		</section>
